# rust-crud-api

./: Cargo.toml  README.MD  api.http  database.db  diesel.toml
migrations/2024-06-15-221010_create_humans/: down.sql  up.sql
src/: database.rs  handlers.rs  main.rs  models.rs
